--- a/SignalRSample/Views/Home/Index.cshtml
+++ b/SignalRSample/Views/Home/Index.cshtml
@@ -3,15 +3,36 @@
 }
 
 <div class="container">
+
+    <div class="row border p-1">
+        <h3>Deathly Hallow Race</h3>
+        <div class="col-4">
+            <div>Invisibility Cloak - <span id="cloakCounter"></span></div>
+        </div>
+        <div class="col-4">
+            <div>Resurrection Stone- <span id="stoneCounter"></span></div>
+        </div>
+        <div class="col-4">
+            <div>Elder Wand - <span id="wandCounter"></span></div>
+        </div>
+        <hr />
+        <p>Click to Vote :</p>
+        <div>
+            <a class="btn btn-primary" target="_blank" href="https://localhost:44305/Home/DeathlyHallows?type=cloak">1. Invisibility Cloak</a>
+            <a class="btn btn-primary" target="_blank" href="https://localhost:44305/Home/DeathlyHallows?type=stone">2. Resurrection Stone</a>
+            <a class="btn btn-primary" target="_blank" href="https://localhost:44305/Home/DeathlyHallows?type=wand">3. Elder Wand</a>
+        </div>
+    </div>
+
     <div class="row">
         <div class="col-3">Total Views: </div>
-        <di class="col-4"v>
+        <di class="col-4" v>
             <span id="totalViewsCounter"></span>
         </di>
     </div>
     <div class="row">
         <div class="col-3">Total Connection/Users: </div>
-        <di class="col-4"v>
+        <di class="col-4" v>
             <span id="totalUsereCounter"></span>
         </di>
     </div>
@@ -19,3 +40,4 @@
 
 <script src="~/lib/microsoft/signalr/dist/browser/signalr.js"></script>
 <script src="~/js/usersCount.js"></script>
+<script src="~/js/deathlyHallows.js"></script>
