--- a/SignalRSample/Views/Home/Index.cshtml
+++ b/SignalRSample/Views/Home/Index.cshtml
@@ -1,109 +1,31 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
-
-<div class="container">
-
-    <div class="row border p-1 mt-3">
-        <h3>Subscribed List: </h3>
-        <hr />
-        <div class="row p-2">
-            <div class="col-3">
-                <label style="color:#B52033" id="lbl_houseJoined"></label>
-            </div>
-        </div>
-    </div>
-    <div class="row border p-1 mt-3">
-        <h3>Subscribe: </h3>
-        <hr />
-        <div class="row p-2">
-            <div class="col-3">
-                <button class="btn" style="background-color:#B52033" id="btn_gryffindor">Gryffindor</button>
-            </div>
-            <div class="col-3">
-                <button class="btn" style="background-color:#236E50" id="btn_slytherin">Slytherin</button>
-            </div>
-            <div class="col-3">
-                <button class="btn" style="background-color:#EDB526" id="btn_hufflepuff">Hufflepuff</button>
-            </div>
-            <div class="col-3">
-                <button class="btn" style="background-color:#10749F" id="btn_ravenclaw">Ravenclaw</button>
-            </div>
-        </div>
-    </div>
-    <div class="row border p-1 mt-3">
-        <h3>Unsubscribe: </h3>
-        <hr />
-        <div class="row p-2">
-            <div class="col-3">
-                <button class="btn" style="background-color:#B52033;display:none;" id="btn_un_gryffindor">Gryffindor</button>
-            </div>
-            <div class="col-3">
-                <button class="btn" style="background-color:#236E50;display:none;" id="btn_un_slytherin">Slytherin</button>
-            </div>
-            <div class="col-3">
-                <button class="btn" style="background-color:#EDB526;display:none;" id="btn_un_hufflepuff">Hufflepuff</button>
-            </div>
-            <div class="col-3">
-                <button class="btn" style="background-color:#10749F;display:none;" id="btn_un_ravenclaw">Ravenclaw</button>
-            </div>
-        </div>
-    </div>
-    <div class="row border p-1 mt-3">
-        <h3>Trigger Notification: </h3>
-        <hr />
-        <div class="row p-2">
-            <div class="col-3">
-                <button class="btn" style="background-color:#B52033" id="trigger_gryffindor">Gryffindor</button>
-            </div>
-            <div class="col-3">
-                <button class="btn" style="background-color:#236E50" id="trigger_slytherin">Slytherin</button>
-            </div>
-            <div class="col-3">
-                <button class="btn" style="background-color:#EDB526" id="trigger_hufflepuff">Hufflepuff</button>
-            </div>
-            <div class="col-3">
-                <button class="btn" style="background-color:#10749F" id="trigger_ravenclaw">Ravenclaw</button>
-            </div>
-        </div>
-    </div>
-
-
-    <div class="row border p-1">
-        <h3>Deathly Hallow Race</h3>
-        <div class="col-4">
-            <div>Invisibility Cloak - <span id="cloakCounter"></span></div>
-        </div>
-        <div class="col-4">
-            <div>Resurrection Stone- <span id="stoneCounter"></span></div>
-        </div>
-        <div class="col-4">
-            <div>Elder Wand - <span id="wandCounter"></span></div>
-        </div>
-        <hr />
-        <p>Click to Vote :</p>
-        <div>
-            <a class="btn btn-primary" target="_blank" href="https://localhost:44305/Home/DeathlyHallows?type=cloak">1. Invisibility Cloak</a>
-            <a class="btn btn-primary" target="_blank" href="https://localhost:44305/Home/DeathlyHallows?type=stone">2. Resurrection Stone</a>
-            <a class="btn btn-primary" target="_blank" href="https://localhost:44305/Home/DeathlyHallows?type=wand">3. Elder Wand</a>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-3">Total Views: </div>
-        <di class="col-4" v>
-            <span id="totalViewsCounter"></span>
-        </di>
-    </div>
-    <div class="row">
-        <div class="col-3">Total Connection/Users: </div>
-        <di class="col-4" v>
-            <span id="totalUsereCounter"></span>
-        </di>
+﻿<div class="container">
+    <div class="flex">
+        <table class="table">
+            <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td><a class="btn btn-primary" asp-controller="home" asp-action="UserCount">User Count</a></td>
+                    <td>Display the number of page views and online users</td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td><a class="btn btn-primary" asp-controller="home" asp-action="DeathlyHallows">Deathly Hallows</a></td>
+                    <td>Voting by using hub in controller</td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td><a class="btn btn-primary" asp-controller="home" asp-action="HouseGroup">House Group</a></td>
+                    <td>Joining different groups and sending group notifications</td>
+                </tr>
+                <tr>
+                    <th scope="row">4</th>
+                    <td><a class="btn btn-primary" asp-controller="home" asp-action="Notification">Notification</a></td>
+                    <td>Notification sending system</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </div>
 
 <script src="~/lib/microsoft/signalr/dist/browser/signalr.js"></script>
-<script src="~/js/usersCount.js"></script>
-<script src="~/js/deathlyHallows.js"></script>
 <script src="~/js/houseGroup.js"></script>
