--- a/SignalRSample/Views/Home/Index.cshtml
+++ b/SignalRSample/Views/Home/Index.cshtml
@@ -22,6 +22,11 @@
                     <td><a class="btn btn-primary" asp-controller="home" asp-action="Notification">Notification</a></td>
                     <td>Notification sending system</td>
                 </tr>
+                <tr>
+                    <th scope="row">5</th>
+                    <td><a class="btn btn-primary" asp-controller="home" asp-action="BasicChat">Basic Chat</a></td>
+                    <td>Basic chat by basic authentication (just for send private message) </td>
+                </tr>
             </tbody>
         </table>
     </div>
