--- a/SignalRSample/Views/Shared/_Layout.cshtml
+++ b/SignalRSample/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Notification">Notification</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="UserCount">User Count</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="DeathlyHallows">Deathly Hallows</a>
@@ -35,9 +35,11 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="HouseGroup">House Group</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="UserCount">User Count</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Notification">Notification</a>
                         </li>
-
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="BasicChat">Basic Chat</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
