--- a/SignalRSample/Views/Home/Index.cshtml
+++ b/SignalRSample/Views/Home/Index.cshtml
@@ -27,6 +27,14 @@
                     <td><a class="btn btn-primary" asp-controller="home" asp-action="BasicChat">Basic Chat</a></td>
                     <td>Basic chat by basic authentication (just for send private message) </td>
                 </tr>
+                <tr>
+                    <th scope="row">6</th>
+                    <td>
+                        <a class="btn btn-primary" asp-controller="home" asp-action="Order">Order</a>
+                        <a class="btn btn-primary" asp-controller="home" asp-action="OrderList">Order List</a>
+                    </td>
+                    <td>Real-time order updates</td>
+                </tr>
             </tbody>
         </table>
     </div>
