--- a/SignalRSample/Views/Shared/_Layout.cshtml
+++ b/SignalRSample/Views/Shared/_Layout.cshtml
@@ -42,6 +42,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="BasicChat">Basic Chat</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Chat">Chat</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Order">Order</a>
                         </li>
                         <li class="nav-item">
