Add chat to index

--- a/SignalRSample/Views/Home/Index.cshtml
+++ b/SignalRSample/Views/Home/Index.cshtml
@@ -35,6 +35,13 @@
                     </td>
                     <td>Real-time order updates</td>
                 </tr>
+                <tr>
+                    <th scope="row">7</th>
+                    <td>
+                        <a class="btn btn-primary" asp-controller="home" asp-action="Chat">Chat</a>
+                    </td>
+                    <td>chat by groups and private/public chat</td>
+                </tr>
             </tbody>
         </table>
     </div>
